# reelgame-rs

./: Cargo.toml  README.md
data/: hits.json  paytable.json  reel1.json  reel2.json  reel3.json  reel4.json  reel5.json
data/feature/: reel1.json  reel2.json  reel3.json  reel4.json  reel5.json
src/: card.rs  count.rs  main.rs  pay.rs  reel.rs
src/games/: base.rs  bonus.rs  feature.rs  mod.rs
