[package]
name = "reelgame-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
threadpool = "1.8.1"
